# bones-cubed

./: Cargo.toml  LICENSE  README.md
assets/actors/: proto.actor  proto.glb
assets/blocks/: air.block  debug.block  dirt.block  grass.block
assets/shaders/: rainbow.wgsl
assets/tilesets/debug/: debug.tiles
assets/tilesets/overworld/: overworld.tiles
assets/tilesets/rainbow/: rainbow.tiles  rainbow.tiles.rainbow
examples/: actors.rs  block.rs  block_placing.rs  chunk.rs  chunk_updates.rs  grass_block.rs  rainbow_shader.rs
src/: lib.rs  mesh.rs
src/actor/: anim.rs  asset.rs  mod.rs  scene.rs
src/block/: asset.rs  culling.rs  filelayout.rs  list.rs  mod.rs  rendered.rs  shape.rs
src/block/models/: cube.rs  culling.rs  face.rs  helper.rs  mod.rs
src/tileset/: asset.rs  filelayout.rs  material.rs  mod.rs  prepass.wgsl  shader.wgsl
src/utils/: asset.rs  gizmos.rs  mesh.rs  mod.rs
src/world/: chunk.rs  mesh.rs  mod.rs  param.rs  picking.rs  pos.rs  remesh.rs  world.rs
