[package]
name = "bones-cubed"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = true }
bitflags = "2"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
bevy_panorbit_camera = "0.34"
bevy = { version = "0.18", features = ["bevy_dev_tools"] }
